--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <!-- THIS IS YOUR JAVASCRIPT FILE LINK -->
-    <!-- <script type="text/javascript" src="assets/javascript/app.js"></script> -->
+    <script type="text/javascript" src="app.js"></script>
 </head>
 
 <body>
